# flow-parser

./: Cargo.toml  README.md  example.py  main.py  pyproject.toml
.github/workflows/: CI.yml
flow_parser/: Cargo.toml
flow_parser/src/: errors.rs  models.rs  parser.rs
py_flow_parser/: Cargo.toml  pyproject.toml
py_flow_parser/.env/: pyvenv.cfg
py_flow_parser/src/: lib.rs
src/: errors.rs  lib.rs  models.rs  parser.rs
