[package]
name = "flow-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "flow_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.28"
