[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

#[project]
#name = "flow-parser"
#requires-python = ">=3.8"
#classifiers = [
#    "Programming Language :: Rust",
#    "Programming Language :: Python :: Implementation :: CPython",
#    "Programming Language :: Python :: Implementation :: PyPy",
#]
#dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.poetry]
name = "flow-parser"
version = "0.1.0"
description = "Rust-based file parser"
authors = ["Matt Barkway <contact@mattbarkway.dev>"]
packages = [{ include = "flow_parser" }]
